<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".activities.MenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="16dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/menu_CARDVIEW"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_margin="25dp"
                android:elevation="10dp"
                app:cardCornerRadius="100dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/menu_IMG_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:src="@drawable/appicon" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/menu_BUTTON_slow"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/btn_background"
                android:text="@string/button_mode_slow"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/menu_BUTTON_fast"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/btn_background"
                android:text="@string/button_mode_fast"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/menu_BUTTON_sensorsMode"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/btn_background"
                android:text="@string/sensors_mode"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/menu_BUTTON_recordChart"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/btn_background"
                android:text="@string/record_chart"
                android:textColor="@color/white" />



        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>